parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl
   5        | decls stmt

   6  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   7  formals_opt :
   8              | formal_list

   9  formal_list : typ ID
  10              | formal_list COMMA typ ID

  11  typ : INT
  12      | BOOL
  13      | VOID

  14  vdecl_list :
  15             | vdecl_list vdecl

  16  vdecl : typ ID SEMI

  17  stmt_list :
  18            | stmt_list stmt

  19  stmt : expr SEMI
  20       | RETURN SEMI
  21       | RETURN expr SEMI
  22       | LBRACE stmt_list RBRACE
  23       | IF LPAREN expr RPAREN stmt
  24       | IF LPAREN expr RPAREN stmt ELSE stmt
  25       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  26       | WHILE LPAREN expr RPAREN stmt

  27  expr_opt :
  28           | expr

  29  expr : LITERAL
  30       | STRING_LITERAL
  31       | TRUE
  32       | FALSE
  33       | ID
  34       | expr PLUS expr
  35       | expr MINUS expr
  36       | expr TIMES expr
  37       | expr DIVIDE expr
  38       | expr EQ expr
  39       | expr NEQ expr
  40       | expr LT expr
  41       | expr LEQ expr
  42       | expr GT expr
  43       | expr GEQ expr
  44       | expr AND expr
  45       | expr OR expr
  46       | MINUS expr
  47       | NOT expr
  48       | ID ASSIGN expr
  49       | ID LPAREN actuals_opt RPAREN
  50       | LPAREN expr RPAREN

  51  actuals_opt :
  52              | actuals_list

  53  actuals_list : expr
  54               | actuals_list COMMA expr

  55  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (55)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (55)

	.  reduce 55


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)
	decls : decls . stmt  (5)

	LPAREN  shift 5
	LBRACE  shift 6
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	INT  shift 15
	BOOL  shift 16
	VOID  shift 17
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	EOF  shift 21
	.  error

	vdecl  goto 22
	fdecl  goto 23
	stmt  goto 24
	typ  goto 25
	expr  goto 26


state 5
	expr : LPAREN . expr RPAREN  (50)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 27


state 6
	stmt : LBRACE . stmt_list RBRACE  (22)
	stmt_list : .  (17)

	.  reduce 17

	stmt_list  goto 28


state 7
	expr : MINUS . expr  (46)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 29


state 8
	expr : NOT . expr  (47)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 30


state 9
	expr : TRUE .  (31)

	.  reduce 31


state 10
	expr : FALSE .  (32)

	.  reduce 32


state 11
	stmt : RETURN . SEMI  (20)
	stmt : RETURN . expr SEMI  (21)

	SEMI  shift 31
	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 32


state 12
	stmt : IF . LPAREN expr RPAREN stmt  (23)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (24)

	LPAREN  shift 33
	.  error


state 13
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (25)

	LPAREN  shift 34
	.  error


state 14
	stmt : WHILE . LPAREN expr RPAREN stmt  (26)

	LPAREN  shift 35
	.  error


state 15
	typ : INT .  (11)

	.  reduce 11


state 16
	typ : BOOL .  (12)

	.  reduce 12


state 17
	typ : VOID .  (13)

	.  reduce 13


state 18
	expr : LITERAL .  (29)

	.  reduce 29


state 19
	expr : STRING_LITERAL .  (30)

	.  reduce 30


state 20
	expr : ID .  (33)
	expr : ID . ASSIGN expr  (48)
	expr : ID . LPAREN actuals_opt RPAREN  (49)

	LPAREN  shift 36
	ASSIGN  shift 37
	SEMI  reduce 33
	RPAREN  reduce 33
	COMMA  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	TIMES  reduce 33
	DIVIDE  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	LEQ  reduce 33
	GT  reduce 33
	GEQ  reduce 33
	AND  reduce 33
	OR  reduce 33


state 21
	program : decls EOF .  (1)

	.  reduce 1


state 22
	decls : decls vdecl .  (3)

	.  reduce 3


state 23
	decls : decls fdecl .  (4)

	.  reduce 4


state 24
	decls : decls stmt .  (5)

	.  reduce 5


state 25
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	vdecl : typ . ID SEMI  (16)

	ID  shift 38
	.  error


state 26
	stmt : expr . SEMI  (19)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 39
	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	.  error


state 27
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : LPAREN expr . RPAREN  (50)

	RPAREN  shift 52
	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	.  error


state 28
	stmt_list : stmt_list . stmt  (18)
	stmt : LBRACE stmt_list . RBRACE  (22)

	LPAREN  shift 5
	LBRACE  shift 6
	RBRACE  shift 53
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	RETURN  shift 11
	IF  shift 12
	FOR  shift 13
	WHILE  shift 14
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	stmt  goto 54
	expr  goto 26


state 29
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : MINUS expr .  (46)

	.  reduce 46


state 30
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : NOT expr .  (47)

	.  reduce 47


state 31
	stmt : RETURN SEMI .  (20)

	.  reduce 20


state 32
	stmt : RETURN expr . SEMI  (21)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	SEMI  shift 55
	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	.  error


state 33
	stmt : IF LPAREN . expr RPAREN stmt  (23)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (24)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 56


state 34
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (25)
	expr_opt : .  (27)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	SEMI  reduce 27

	expr  goto 57
	expr_opt  goto 58


state 35
	stmt : WHILE LPAREN . expr RPAREN stmt  (26)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 59


state 36
	expr : ID LPAREN . actuals_opt RPAREN  (49)
	actuals_opt : .  (51)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	RPAREN  reduce 51

	expr  goto 60
	actuals_opt  goto 61
	actuals_list  goto 62


state 37
	expr : ID ASSIGN . expr  (48)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 63


state 38
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	vdecl : typ ID . SEMI  (16)

	SEMI  shift 64
	LPAREN  shift 65
	.  error


state 39
	stmt : expr SEMI .  (19)

	.  reduce 19


state 40
	expr : expr PLUS . expr  (34)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 66


state 41
	expr : expr MINUS . expr  (35)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 67


state 42
	expr : expr TIMES . expr  (36)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 68


state 43
	expr : expr DIVIDE . expr  (37)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 69


state 44
	expr : expr EQ . expr  (38)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 70


state 45
	expr : expr NEQ . expr  (39)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 71


state 46
	expr : expr LT . expr  (40)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 72


state 47
	expr : expr LEQ . expr  (41)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 73


state 48
	expr : expr GT . expr  (42)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 74


state 49
	expr : expr GEQ . expr  (43)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 75


state 50
	expr : expr AND . expr  (44)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 76


state 51
	expr : expr OR . expr  (45)

	LPAREN  shift 5
	MINUS  shift 7
	NOT  shift 8
	TRUE  shift 9
	FALSE  shift 10
	LITERAL  shift 18
	STRING_LITERAL  shift 19
	ID  shift 20
	.  error

	expr  goto 77


state 52
	expr : LPAREN expr RPAREN .  (50)

	.  reduce 50


state 53
	stmt : LBRACE stmt_list RBRACE .  (22)

	.  reduce 22


state 54
	stmt_list : stmt_list stmt .  (18)

	.  reduce 18


state 55
	stmt : RETURN expr SEMI .  (21)

	.  reduce 21


state 56
	stmt : IF LPAREN expr . RPAREN stmt  (23)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (24)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 78
	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	.  error


state 57
	expr_opt : expr .  (28)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	SEMI  reduce 28
	RPAREN  reduce 28


state 58
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (25)

	SEMI  shift 79
	.  error


state 59
	stmt : WHILE LPAREN expr . RPAREN stmt  (26)
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	RPAREN  shift 80
	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	.  error


state 60
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	actuals_list : expr .  (53)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	RPAREN  reduce 53
	COMMA  reduce 53


state 61
	expr : ID LPAREN actuals_opt . RPAREN  (49)

	RPAREN  shift 81
	.  error


state 62
	actuals_opt : actuals_list .  (52)
	actuals_list : actuals_list . COMMA expr  (54)

	COMMA  shift 82
	RPAREN  reduce 52


state 63
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)
	expr : ID ASSIGN expr .  (48)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	EQ  shift 44
	NEQ  shift 45
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	AND  shift 50
	OR  shift 51
	SEMI  reduce 48
	RPAREN  reduce 48
	COMMA  reduce 48


state 64
	vdecl : typ ID SEMI .  (16)

	.  reduce 16


state 65
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (6)
	formals_opt : .  (7)

	INT  shift 15
	BOOL  shift 16
	VOID  shift 17
	RPAREN  reduce 7

	typ  goto 83
	formals_opt  goto 84
	formal_list  goto 85


state 66
	expr : expr . PLUS expr  (34)
	expr : expr PLUS expr .  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	TIMES  shift 42
	DIVIDE  shift 43
	SEMI  reduce 34
	RPAREN  reduce 34
	COMMA  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LT  reduce 34
	LEQ  reduce 34
	GT  reduce 34
	GEQ  reduce 34
	AND  reduce 34
	OR  reduce 34


state 67
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr MINUS expr .  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	TIMES  shift 42
	DIVIDE  shift 43
	SEMI  reduce 35
	RPAREN  reduce 35
	COMMA  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	EQ  reduce 35
	NEQ  reduce 35
	LT  reduce 35
	LEQ  reduce 35
	GT  reduce 35
	GEQ  reduce 35
	AND  reduce 35
	OR  reduce 35


state 68
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr TIMES expr .  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 36


state 69
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr DIVIDE expr .  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	.  reduce 37


state 70
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr EQ expr .  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	AND  reduce 38
	OR  reduce 38


state 71
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr NEQ expr .  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	LT  shift 46
	LEQ  shift 47
	GT  shift 48
	GEQ  shift 49
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	AND  reduce 39
	OR  reduce 39


state 72
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr LT expr .  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	SEMI  reduce 40
	RPAREN  reduce 40
	COMMA  reduce 40
	EQ  reduce 40
	NEQ  reduce 40
	LT  reduce 40
	LEQ  reduce 40
	GT  reduce 40
	GEQ  reduce 40
	AND  reduce 40
	OR  reduce 40


state 73
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr LEQ expr .  (41)
	expr : expr . GT expr  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	SEMI  reduce 41
	RPAREN  reduce 41
	COMMA  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41
	AND  reduce 41
	OR  reduce 41


state 74
	expr : expr . PLUS expr  (34)
	expr : expr . MINUS expr  (35)
	expr : expr . TIMES expr  (36)
	expr : expr . DIVIDE expr  (37)
	expr : expr . EQ expr  (38)
	expr : expr . NEQ expr  (39)
	expr : expr . LT expr  (40)
	expr : expr . LEQ expr  (41)
	expr : expr . GT expr  (42)
	expr : expr GT expr .  (42)
	expr : expr . GEQ expr  (43)
	expr : expr . AND expr  (44)
	expr : expr . OR expr  (45)

	PLUS  shift 40
	MINUS  shift 41
	TIMES  shift 42
	DIVIDE  shift 43
	SEMI  reduce 42
	RPAREN  reduce 42
	COMMA  reduce 42
	EQ  reduce 42
	NEQ  reduce 42
	LT  reduce 42
	LEQ  reduce 42
	GT  reduce 42
	GEQ  reduce 42
	AND  reduce 42
	OR  reduce 42

